2003-01-28  Thomas Klausner  <wiz@dmath5.geometrie.tuwien.ac.at>

	* dccserver.c (get_file): only warn if we really get more than
	expected, not if we just get all the bytes.

	* dccserver.mdoc: remove a superfluous word.
	* dccserver.man: regen.

2003-01-23  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* dccserver.c (communicate_with_client): remove unused variable.

	* config.guess: update to 2003-01-10, prompted by Aubin Paul.
	* config.sub: update to 2003-01-22, prompted by Aubin Paul.

2003-01-22  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* configure.ac: Bump version to 0.2.

	* configure.ac: check for seteuid.
	* dccserver.c: add more prototypes for replacement functions.
	(main): ifdef out seteuid if not existing.

	* dccserver.mdoc: update for using chroot and setuid.
	* dccserver.man: regen.

	* dccserver.c: allow receiving more than expected number of
	bytes, but show a warning. From Per von Zweigbergk
	<pvz@e.kth.se>.
	(main): chdir to "/" in chroot.

	* configure.ac: use autoconf 2.57.

	* Makefile.am (install-exec-hook): allow installation to succeed
	if chown/chmod for installing dccserver setuid root fail.

	* dccserver.c: add prototype for strlcpy if needed. Suggestion by
	Per von Zweigbergk <pvz@e.kth.se>.
	(get_file): add " got" in closing-connection-string. From Per von
	Zweigbergk <pvz@e.kth.se>.
	(main): install signal handlers later.

	* Makefile.am (install-exec-hook): install dccserver setuid root.
	* dccserver.c: chroot(2) to current dir; drop setuid bits after
	opening the DCC port. Suggestion by Per von Zweigbergk
	<pvz@e.kth.se>.
	
	* COPYING, dccserver.c: update copyright year.

	* COPYING: remove paragraph about snprintf.c.
	* configure.ac, Makefile.am (EXTRA_DIST): remove snprintf.c.
	* snprintf.c: removed.
	* dccserver.c: use fputs/puts/strlcpy instead of fprintf and
	snprintf.

2002-11-15  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* mkinstalldirs: update to automake 1.7.1 version.

	* configure.ac: update to autoconf 2.56.
