@@ -1,4 +1,4 @@
-.\" $NiH: dccserver.mdoc,v 1.2 2003/01/22 16:50:46 wiz Exp $
+.\" $NiH: dccserver.mdoc,v 1.3 2003/01/28 15:02:17 wiz Exp $
 .\"
 .\" Copyright (c) 2002, 2003 Thomas Klausner.
 .\" All rights reserved.
@@ -36,7 +36,7 @@
 .Nd simulate MIRC's /dccserver command
 .Sh SYNOPSIS
 .Nm ""
-.Op Fl hv
+.Op Fl hiv
 .Op Fl n Ar nickname
 .Op Fl p Ar port
 .Sh DESCRIPTION
@@ -53,6 +53,10 @@ Supported options:
 .Bl -tag -width XnXnicknameXX
 .It Fl h
 Display a short help message.
+.It Fl i
+Do not filter out control characters for color, bold, reverse, and
+underlined text.
+Useful if your terminal or wrapper can interpret them.
 .It Fl n Ar nickname
 Set nickname used in handshake to
 .Ar nickname .
